// Protocol definitions for communication with ONS

syntax = "proto3";

// Common RF information message
message RFInfo {
    string band   = 1;  // Band must match a named band in the ONS config
    int32 channel = 2;  // Channel number
}

// Sent on ONS first connection
message Register {
    string address = 1;     // Address is the network address of the device
}

// Sent on ONS connector close
message Deregister {
    string address = 1;     // Address is the network address of the device
}

// Packet to be sent
message Packet {
    bytes data      = 1;    // Data payload
    RFInfo info     = 2;    // RF information
}

// Indicates that a message send has completed
message SendComplete {

}

// Indicates a device has entered the receive state
message StartReceive {
    RFInfo info = 1;        // Receive channel information
}

// Indicates a device has left the receive state
message StopReceive {
    RFInfo info = 1;        // Receive channel information
}

// Request RSSI for a provided channel
message RSSIReq {
    RFInfo info = 1;        // Receive channel information
}

// RSSI value response
message RSSIResp {
    float rssi = 1;         // RSSI value
}

// Event used to log events on a node back to the ONS server
message Event {
    string data = 1;        // Event data
}

// Base / common message
// This is the on-the-wire communication type
message Base {
    oneof message {
        Register        register        = 1;
        Deregister      deregister      = 2;
        Packet          packet          = 3;
        SendComplete    sendComplete    = 4;
        StartReceive    startReceive    = 5;
        StopReceive     stopReceive     = 6;
        Event           event           = 7;
        RSSIReq         rssiReq         = 8;
        RSSIResp        rssiResp        = 9;
    }
}